[RTD-2454] solve some code smell